--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
                     I am a seasoned professional with over 17 years of overall experience and a dedicated focus on DevOps for the past 5 years. My career has evolved through various roles, providing me with a solid foundation in cloud infrastructure, automation, project management, and more. My expertise includes optimizing costs, improving efficiency, and driving transformative changes. Always eager to learn and adapt to new technologies and methodologies.
                 </p>
                 <div class="d-flex justify-content-center mb-5">
-                    <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-outline-primary mr-2" href="https://linkedin.com/in/owoade-taiwo-5b34a943"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-dark mr-2" href="https://github.com/Adexxy">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
+                    
                 </div>
                 <a href="mailto:adexxy@live.com" class="btn btn-lg btn-block btn-primary mt-auto">Hire Me</a>
             </div>
