--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
                                 <small class="mr-2 text-muted"><i class="fa fa-comments"></i> 15 Comments</small>
                             </div> -->
                             <p>
-                                Showcase projects related to automated build and deployment processes
+                                Showcases projects related to automated build and deployment processes
                             </p>
                             <!-- List of projects -->
                             <ul>
-                                <li><a href="projects.html">Terraform Projects</a></li>
-                                <li><a href="projects.html">Ansible Projects</a></li>
-                                <li><a href="projects.html">AWS CloudFormation Projects</a></li>
-                                <li><a href="projects.html">Vagrant Projects</a></li>
+                                <li><a href="projects.html#terraform-project-1">Multibranch Pipeline</a></li>
+                                <li><a href="projects.html#terraform-project-2">Simple Java Maven App pipeline</a></li>
+                                <li><a href="projects.html#terraform-project-3">Complete CI/CD Projects</a></li>
+                                <li><a href="projects.html#terraform-project-4">AWS CI/CD Projects</a></li>
                                 <!-- Add more projects as needed -->
                             </ul>
 
@@ -128,10 +128,10 @@
                             </p>
                             <!-- List of projects -->
                             <ul>
-                                <li><a href="projects.html">Terraform Projects</a></li>
-                                <li><a href="projects.html">Ansible Projects</a></li>
-                                <li><a href="projects.html">AWS CloudFormation Projects</a></li>
-                                <li><a href="projects.html">Vagrant Projects</a></li>
+                                <li><a href="projects.html#terraform-project-5">Terraform AWS - CloudFormation</a></li>
+                                <li><a href="projects.html#terraform-project-6">Terraform AWS - EKS</a></li>
+                                <li><a href="projects.html#terraform-project-7">Terraform Virtualbox Ansible - Kubespray</a></li>
+                                <li><a href="projects.html#terraform-project-8">Vagrant Projects</a></li>
                                 <!-- Add more projects as needed -->
                             </ul>
                             <a class="btn btn-link p-0" href="projects.html">View All Projects<link rel="stylesheet" href=""> <i class="fa fa-angle-right"></i></a>
