--- a/projects.html
+++ b/projects.html
@@ -81,32 +81,115 @@
             <div id="project-container" class="container">
                 <h1 class="mb-4">All Projects</h1>
 
-                <!-- Project Cards -->
-                <div class="row">
-                    <!-- Project 1 -->
-                    <div class="col-md-12">
-                        <div class="project-card">
-                            <h3>Terraform Project</h3>
-                            <p>This repository contains Terraform code to provision VMs using VirtualBox and an Ansible playbook to deploy an application to the VMs.</p>
-                            <!-- Add more project details as needed -->
-                            <a href="https://github.com/Adexxy/Create-Virtualbox-VM-s-with-Terraform-#terraform-virtualbox-ansible" class="btn btn-primary">View Details</a>
+                <!-- CICD Projects -->
+                <div id="CICD-projects" class="project-category">
+                    <h2>Continuous Integration/Continuous Deployment (CI/CD) Projects</h2>
+                    <div class="row">
+                        <!-- Project cards for Terraform Projects -->
+                        <div id="terraform-project-1" class="col-md-12">
+                            <div class="project-card">
+                                <h3>Multibranch Pipeline</h3>
+                                <p>This repository contains Jenkins multibranch pipeline code to build and test NodeJS app.</p>
+                                <!-- Add more project details as needed -->
+                                <a href="https://github.com/Adexxy/building-a-multibranch-pipeline-project#readme" class="btn btn-primary">View Details</a>
+                            </div>
                         </div>
-                    </div>
-
-                    <!-- Project 2 -->
-                    <div class="col-md-12">
-                        <div class="project-card">
-                            <h3>Project 2 Title</h3>
-                            <p>Description of Project 2.</p>
-                            <!-- Add more project details as needed -->
-                            <a href="project2.html" class="btn btn-primary">View Details</a>
+                        <div id="terraform-project-2" class="col-md-12">
+                            <div class="project-card">
+                                <h3>Simple Java Maven App pipeline</h3>
+                                <p>This repository contains Jenkins pipeline code to build and test NodeJS app.</p>
+                                <!-- Add more project details as needed -->
+                                <a href="https://github.com/Adexxy/simple-java-maven-app#simple-java-maven-app" class="btn btn-primary">View Details</a>
+                            </div>
                         </div>
+                        <div id="terraform-project-3" class="col-md-12">
+                            <div class="project-card">
+                                <h3>Complete CI/CD Pipeline</h3>
+                                <p>This repository contains complete end-to-end Jenkins CI/CD pipeline.</p>
+                                <!-- Add more project details as needed -->
+                                <a href="project1.html" class="btn btn-primary">View Details</a>
+                            </div>
+                        </div>
+                        <!-- Add more project cards for Terraform Projects -->
                     </div>
-
-                    <!-- Add more project cards for each project -->
                 </div>
-            </div>
 
+                <!-- IaC Projects -->
+                <div id="IaC-projects" class="project-category">
+                    <h2>Infrastructure as Code (IaC) Projects</h2>
+                    <div class="row">
+                        <!-- Project cards for Terraform Projects -->
+                        <div id="terraform-project-4" class="col-md-12">
+                            <div class="project-card">
+                                <h3>Terraform AWS - CloudFormation</h3>
+                                <p>This repository contains Terraform code to provision VMs using VirtualBox and an Ansible playbook to deploy an application to the VMs.</p>
+                                <!-- Add more project details as needed -->
+                                <a href="project1.html" class="btn btn-primary">View Details</a>
+                            </div>
+                        </div>
+                        <div id="terraform-project-5" class="col-md-12">
+                            <div class="project-card">
+                                <h3>Terraform AWS - EKS</h3>
+                                <p>This repository contains Terraform code to provision VMs using VirtualBox and an Ansible playbook to deploy an application to the VMs.</p>
+                                <!-- Add more project details as needed -->
+                                <a href="https://github.com/Adexxy/terraform-aws-eks#aws-eks-terraform-module" class="btn btn-primary">View Details</a>
+                            </div>
+                        </div>
+                        <div id="terraform-project-6" class="col-md-12">
+                            <div class="project-card">
+                                <h3>Terraform Virtualbox Ansible - Kubespray</h3>
+                                <p>This repository contains Terraform code to provision VMs using VirtualBox and an Ansible playbook to deploy kubernetes cluster using kubespray to the VMs.</p>
+                                <!-- Add more project details as needed -->
+                                <a href="project1.html" class="btn btn-primary">View Details</a>
+                            </div>
+                        </div>
+                        <div id="terraform-project-6" class="col-md-12">
+                            <div class="project-card">
+                                <h3>Vagrant Virtualbox</h3>
+                                <p>This repository contains Vagrant code to provision local VM's for local testing environment.</p>
+                                <!-- Add more project details as needed -->
+                                <a href="project1.html" class="btn btn-primary">View Details</a>
+                            </div>
+                        </div>
+                        <!-- Add more project cards for Terraform Projects -->
+                    </div>
+                </div>
+                <!-- NodeJS Projects -->
+                <div id="terraform-projects" class="project-category">
+                    <h2>NodeJS Projects</h2>
+                    <div class="row">
+                        <!-- Project cards for Terraform Projects -->
+                        <div id="terraform-project-7" class="col-md-12">
+                            <div class="project-card">
+                                <h3>Terraform AWS</h3>
+                                <p>This repository contains Terraform code to provision VMs using VirtualBox and an Ansible playbook to deploy an application to the VMs.</p>
+                                <!-- Add more project details as needed -->
+                                <a href="project1.html" class="btn btn-primary">View Details</a>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div id="terraform-project-8" class="project-card">
+                                <h3>Terraform Virtualbox Kubespray</h3>
+                                <p>This repository contains Terraform code to provision VMs using VirtualBox and an Ansible playbook to deploy an application to the VMs.</p>
+                                <!-- Add more project details as needed -->
+                                <a href="project1.html" class="btn btn-primary">View Details</a>
+                            </div>
+                        </div>
+                        <div id="terraform-project-9" class="col-md-12">
+                            <div class="project-card">
+                                <h3>Terraform Virtualbox Ansible</h3>
+                                <p>This repository contains Terraform code to provision VMs using VirtualBox and an Ansible playbook to deploy an application to the VMs.</p>
+                                <!-- Add more project details as needed -->
+                                <a href="project1.html" class="btn btn-primary">View Details</a>
+                            </div>
+                        </div>
+                        <!-- Add more project cards for Terraform Projects -->
+                    </div>
+                </div>
+                <!-- Other Project Categories -->
+                <!-- Add similar structures for other project categories -->
+
+            </div>
 
             <!-- JavaScript Libraries -->
             <!-- Include necessary scripts -->
