--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <!-- ... (head content) ... -->
     <meta charset="utf-8">
-    <title>My DevOps Projects</title>
+    <title>My DevOps Portfolio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free Website Template" name="keywords">
     <meta content="Free Website Template" name="description">
