--- a/index.html
+++ b/index.html
@@ -99,10 +99,7 @@
                             </p>
                             <!-- List of projects -->
                             <ul>
-                                <li><a href="projects.html#terraform-project-1">Multibranch Pipeline</a></li>
-                                <li><a href="projects.html#terraform-project-2">Simple Java Maven App pipeline</a></li>
-                                <li><a href="projects.html#terraform-project-3">Complete CI/CD Projects</a></li>
-                                <li><a href="projects.html#terraform-project-4">AWS CI/CD Projects</a></li>
+                                <li><a href="projects.html#terraform-project-1">Commerce-App</a></li>
                                 <!-- Add more projects as needed -->
                             </ul>
 
@@ -121,14 +118,35 @@
                                 <small class="mr-2 text-muted"><i class="fa fa-comments"></i> 15 Comments</small>
                             </div> -->
                             <p>
-                                This is a display of projects requiring Terrafom IaaC
+                                This is a display of projects requiring IaaC to provision and manage servers
                             </p>
                             <!-- List of projects -->
                             <ul>
-                                <li><a href="projects.html#terraform-project-5">Terraform AWS - CloudFormation</a></li>
-                                <li><a href="projects.html#terraform-project-6">Terraform AWS - EKS</a></li>
-                                <li><a href="projects.html#terraform-project-7">Terraform Virtualbox Ansible - Kubespray</a></li>
-                                <li><a href="projects.html#terraform-project-8">Vagrant Projects</a></li>
+                                <li><a href="projects.html#terraform-project-8">Creation of Kuberbetes cluster on bare metal server</a></li>
+                                <li><a href="projects.html#terraform-project-8">AWS infrastrusture</a></li>
+                                <!-- Add more projects as needed -->
+                            </ul>
+                            <a class="btn btn-link p-0" href="projects.html">View All Projects<link rel="stylesheet" href=""> <i class="fa fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                    <div class="row blog-item px-3 pb-5">
+                        <div class="col-md-5">
+                            <img class="img-fluid mb-4 mb-md-0" src="img/blog-1.jpg" alt="Image">
+                        </div>
+                        <div class="col-md-7">
+                            <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">Site Reliability Engineering and Monitoring</h3>
+                            <!-- <div class="d-flex mb-3">
+                                <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
+                                <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
+                                <small class="mr-2 text-muted"><i class="fa fa-comments"></i> 15 Comments</small>
+                            </div> -->
+                            <p>
+                                This is a display of projects requiring IaaC to provision and manage servers
+                            </p>
+                            <!-- List of projects -->
+                            <ul>
+                                <li><a href="projects.html#terraform-project-8">Site Reliabilty Engineering</a></li>
+                                <li><a href="projects.html#terraform-project-8">Monitoring</a></li>
                                 <!-- Add more projects as needed -->
                             </ul>
                             <a class="btn btn-link p-0" href="projects.html">View All Projects<link rel="stylesheet" href=""> <i class="fa fa-angle-right"></i></a>
