--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,29 @@
         .project-card h3 {
             margin-bottom: 10px;
         }
+
+        .tool-boxes {
+        display: flex;
+        flex-direction: row;
+        }
+
+        .tool-box {
+            margin-right: 10px;
+            padding: 5px 10px;
+            background-color: #f0f0f0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .tools-heading {
+            font-size: 14px; /* Adjust the font size as needed */
+            text-decoration: underline;
+        }
+
+        .view-details-link {
+        margin-top: 10px; /* Added margin to create space between tool-boxes and link */
+        }
+
     </style>
     
 </head>
@@ -90,11 +113,21 @@
                         <!-- Project cards for Terraform Projects -->
                         <div id="terraform-project-1" class="col-md-12">
                             <div class="project-card">
-                                <h3>Multibranch Pipeline</h3>
-                                <p>This repository contains Jenkins multibranch pipeline code to build and test NodeJS app.</p>
-                                <!-- Add more project details as needed -->
-                                <a href="https://github.com/Adexxy/building-a-multibranch-pipeline-project#readme" class="btn btn-primary">View Details</a>
-                            </div>
+                                <h3>Commerce-App</h3>
+                                <p>This is a simple commerce project currently under construction, aimed at showcasing a CI process. The project involves building the app and publishing the artifacts to DockerHub and Nexus.</p>
+                                <!-- Tools used -->
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">Node.js</div>
+                                    <div class="tool-box">React</div>
+                                    <div class="tool-box">GitHub</div>
+                                    <div class="tool-box">Jenkins</div>
+                                    <div class="tool-box">DockerHub</div>
+                                    <div class="tool-box">Nexus</div>
+                                    <!-- Add more tools as needed -->
+                                </div>
+                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
+                            </div>                            
                         </div>
                         <div id="terraform-project-2" class="col-md-12">
                             <div class="project-card">
