--- a/projects.html
+++ b/projects.html
@@ -114,7 +114,7 @@
                         <div id="terraform-project-1" class="col-md-12">
                             <div class="project-card">
                                 <h3>Commerce-App</h3>
-                                <p>This is a simple commerce project currently under construction, aimed at showcasing a CI process. The project involves building the app and publishing the artifacts to DockerHub and Nexus.</p>
+                                <p>This is a simple commerce-app project currently under construction, aimed at showcasing a CI process. The project involves building the app and publishing the artifacts to DockerHub and Nexus.</p>
                                 <!-- Tools used -->
                                 <h4 class="tools-heading">Tools Used</h4>
                                 <div class="tool-boxes">
@@ -191,15 +191,24 @@
                 </div>
                 <!-- NodeJS Projects -->
                 <div id="terraform-projects" class="project-category">
-                    <h2>NodeJS Projects</h2>
+                    <h2>Infrastructure as Code Projects</h2>
                     <div class="row">
                         <!-- Project cards for Terraform Projects -->
                         <div id="terraform-project-7" class="col-md-12">
                             <div class="project-card">
-                                <h3>Terraform AWS</h3>
-                                <p>This repository contains Terraform code to provision VMs using VirtualBox and an Ansible playbook to deploy an application to the VMs.</p>
+                                <h3>Creation of Kuberbetes cluster on bare metal server</h3>
+                                <p>This repository contains Vagrant and Terraform code to provision VMs using VirtualBox VM's or bare metal and an Ansible playbook to deploy an application to the VMs.</p>
+                                <!-- Tools used -->
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">Vagrant</div>
+                                    <div class="tool-box">Terraform</div>
+                                    <div class="tool-box">Ansible</div>
+                                    <div class="tool-box">Kubernetes</div>
+                                    <!-- Add more tools as needed -->
+                                </div>
                                 <!-- Add more project details as needed -->
-                                <a href="project1.html" class="btn btn-primary">View Details</a>
+                                <a href="https://github.com/Adexxy/kubespray" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
                         <div class="col-md-12">
